2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaValidator.cs : added missing ValidateWhitespace and
	  ValidateText, though the latter I think is LAMESPEC.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaValidationFlags.cs : updated to match 2.0 RTM.
	* XmlSchemaValidator.cs : related fix.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlValueGetter.cs, XmlSchemaValidator.cs, XmlSchemaException.cs,
	  XmlSchemaAttribute.cs : Updated API to match 2.0 RTM. Most of the
	  changes are related to XmlValueGetter change.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaValidator.cs : sealed.
	* ValidationEventArgs.cs : not sealed in 2.0.
	* XmlSchemaCollection.cs : added private ICollection.Count (to erase
	  IsVirtual difference).

2005-10-17  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlSchemaSerializer.cs: Arrays of XmlNode don't
	need to be all XmlElments. Fix by Atsushi for bug #76288.

2005-09-30  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaUtil.cs: (GetParserContext) if reader is not internal 
	  IHasXmlParserContext, silently return null. This is for NVDL xsd
	  support.

2005-09-30  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchema.cs : XmlReader position after Read() is the end of the
	  schema element.

2005-09-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaBuiltInType.cs : removed obsolete beta file.

2005-09-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaValidationFlags.cs, XmlSchemaValidator.cs :
	  NET_2_0 API updates.

2005-08-31  Sebastien Pouliot  <sebastien@ximian.com>

	* XmlSchemaException.cs: Added a Demand for SerializationFormatter
	on GetObjectData method.

2005-08-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaSimpleTypeRestriction.cs : normalize EOL.
	  Remove non-ASCII letters.

2005-08-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaComplexType.cs : Fixed ValidateTypeDerivationOK (complex)
	  that missed primitive simple types as base types (BaseXmlSchemaType