@@ -1,3 +1,7 @@
+2005-12-01  Atsushi Enomoto <atsushi@ximian.com>
+
+	* XmlSchemaTests.cs : added testcase for #76865.
+
 2005-10-23  Atsushi Enomoto <atsushi@ximian.com>
 
 	* XmlSchemaTests.cs : some namespace output strategy seems changed
